New dependecies and settings in gradle build settings for JavaFX